[gd_scene load_steps=4 format=3 uid="uid://cykaq0jnbh5t5"]

[ext_resource type="Script" path="res://dialog.gd" id="1_5th05"]
[ext_resource type="Texture2D" uid="uid://c0moyb335i8ys" path="res://ui.png" id="1_ykpn7"]
[ext_resource type="AudioStream" uid="uid://vih2ru8tj2a6" path="res://sounds/mixkit-small-electric-glitch-2595.wav" id="2_x2n6f"]

[node name="Dialog" type="MarginContainer"]
z_index = 5
offset_right = 17.0
offset_bottom = 29.0
script = ExtResource("1_5th05")

[node name="SoundNextLetter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_x2n6f")
volume_db = -10.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_ykpn7")
region_rect = Rect2(0, 0, 24, 24)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="NextLetterTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="NextLetterTimer" to="." method="_on_next_letter_timer_timeout"]
